package gloncak.jozef.design.pattern.observer.api.dp;

/**
 * Own implementation of Observable interface
 */
public interface Observable {
}
